# G4Linacs

./: .gitignore  README_EN.md  Readme.md
Halcyon6MV/: README.txt  data.ipynb  main.cc
Halcyon6MV/include/: DetectorConstruction.hh  GlobalSeed.hh  event.hh  stepping.hh
Halcyon6MV/src/: DetectorConstruction.cc  GlobalSeed.cc
Infinity6MV/: README.txt
Infinity6MV/include/: PhysicsList.hh  run.hh
Infinity6MV/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGenerator.cc
Infinity6MVFFF/: CMakeLists.txt  README.txt
Infinity6MVFFF/macros/: default.mac
Infinity6MVFFF/src/: DetectorConstruction.cc
Infinity6MV_PSF/: FUENTEDEMODELAJE.txt
Infinity6MV_PSF/include/: DetectorConstruction.hh
Infinity6MV_PSF/src/: DetectorConstruction.cc  PhysicsList.cc  SensitiveDetector.cc  run.cc  stepping.cc
STL_BASED/Halcyon6MV/: CMakeLists.txt  README.txt  merged_output.csv
STL_BASED/Halcyon6MV/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGenerator.hh  event.hh  run.hh
STL_BASED/Halcyon6MV/macros/: default.mac
STL_BASED/Halcyon6MV/ply/MLCs/: 1126.ply  301.ply  303.ply  304.ply  306.ply  307.ply  308.ply  310.ply  312.ply  313.ply  314.ply  322.ply  323.ply  324.ply  325.ply  327.ply  328.ply  329.ply  330.ply  332.ply  334.ply  341.ply  342.ply  343.ply  344.ply  345.ply  346.ply  348.ply  349.ply  350.ply  351.ply  352.ply  353.ply  354.ply  362.ply  364.ply  365.ply  366.ply  367.ply  369.ply  (+47 more)
STL_BASED/Halcyon6MV/ply/MLCs/tempHider/: 321.ply  331.ply  333.ply  347.ply  361.ply  368.ply  370.ply  371.ply  373.ply  410.ply  453.ply  465.ply  467.ply  904.ply
STL_BASED/Halcyon6MV/ply/camilla/: 2000.ply  2001.ply  903.ply
STL_BASED/Halcyon6MV/src/: DetectorConstruction.cc  SensitiveDetector.cc
STL_BASED/Halcyon6MV/tetgen/: CMakeLists.txt
STL_BASED/Halcyon6MV/tetgen/.github/: issue_template.md  pull_request_template.md
tempHider/: 302.ply  305.ply  309.ply  311.ply  326.ply  363.ply  407.ply  413.ply  423.ply  428.ply  443.ply  446.ply  468.ply
